# automatic-gpt-prompt

./: .gitignore  README.md  main.py  pyproject.toml
src/: chatgpt.py  screen.py
utils/: decorators.py
