[project]
name = "automatic-gpt-prompt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matv864", email = "matv864@gmail.com" }
]
dependencies = [
    "pyautogui>=0.9.54",
    "pillow>=11.0.0",
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.3",
    "clipboard>=0.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/automatic_gpt_prompt"]
